--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TIRAMISU</title>
 </head>
+
 <body>
     <table border="0" width="90%" align="center">
         <tr>
             <td colspan="2">
-                <h1>sallys baking addiction</h1>
+                <h1 style="color:aqua">sallys <em style="color:red;">baking</em> addiction</h1>
             </td>
         </tr>
 
-            <tr>
-                <td colspan="2" height="50" style="background-color: aqua;">
-                <nav> 
-                    <a href="#"><strong>BREAD</strong></a>/
-                    <a href="#"><strong>CAKES</strong></a>/
-                    <a href="#"><strong>COOKIES</strong></a>/
-                    <a href="#"><strong>CUPCAKES</strong></a>/
-                    <a href="#"><strong>PIES</strong></a>/
-                    <a href="#"><strong>BAKING TIPS</strong></a>/
-                    <a href="#"><strong>RECIPES</strong></a>/
+        <tr>
+            <td colspan="2" height="50" style="background-color: aqua;">
+                <nav>
+                    <a href="#"><strong>BREAD</strong></a><b> / </b>
+                    <a href="#"><strong>CAKES</strong></a><b> / </b>
+                    <a href="#"><strong>COOKIES</strong></a><b> / </b>
+                    <a href="#"><strong>CUPCAKES</strong></a><b> / </b>
+                    <a href="#"><strong>PIES</strong></a><b> / </b>
+                    <a href="#"><strong>BAKING TIPS</strong></a><b> / </b>
+                    <a href="#"><strong>RECIPES</strong></a><b> / </b>
                 </nav>
             </td>
         </tr>
@@ -42,11 +44,11 @@
         <tr width="100%" valign="top">
             <td valign="top">
                 <h4>Posten on March 23, 2015/ posted in <a href="#">Cakes</a> / <a href="#">1011 comments</a></h4>
-            </td>   
+            </td>
         </tr>
         <tr>
             <td colspan="2" align="center">
-                <img height="430" src="cake2.png">  
+                <img height="430" src="cake2.png">
                 <img height="430" src="cake2.png">
                 <img height="430" src="cake3.png">
                 <img height="430" src="cake3.png">
@@ -60,7 +62,7 @@
                 <form>
                     <label from="quantity">How many:</label>
                     <br>
-                    <input type="number" id="quantity">
+                    <input type="number" id="quantity" min="1" max="10">
                     <br><br>
                     <label from="name">Name:</label>
                     <br>
@@ -81,11 +83,16 @@
 
             </td>
             <td valign="top">
-                <p><strong>Lorem</strong> ipsum dolor sit amet consectetur adipisicing elit. Eveniet cumque porro velit est, unde error dicta vitae aliquid? Amet provident quia at deserunt laborum sint quis iste nesciunt ipsa reiciendis?</p>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis non perspiciatis sapiente quidem quia minus, nihil nemo nam dignissimos earum, consequatur voluptatum alias? Mollitia ducimus minus obcaecati optio. Ut, eius. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto minima tenetur odit laborum corrupti doloremque. Nulla cumque quae ut delectus iste quidem dignissimos expedita, accusamus rerum, assumenda suscipit facilis beatae.</p>
+                <p><strong>Lorem</strong> ipsum dolor sit amet consectetur adipisicing elit. Eveniet cumque porro velit
+                    est, unde error dicta vitae aliquid? Amet provident quia at deserunt laborum sint quis iste nesciunt
+                    ipsa reiciendis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis non perspiciatis sapiente quidem quia
+                    minus, nihil nemo nam dignissimos earum, consequatur voluptatum alias? Mollitia ducimus minus
+                    obcaecati optio. Ut, eius. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto
+                    minima tenetur odit laborum corrupti doloremque. Nulla cumque quae ut delectus iste quidem
+                    dignissimos expedita, accusamus rerum, assumenda suscipit facilis beatae.</p>
 
-                <br><br>
+
                 <h2>Ingredients</h2>
                 <ul>
                     <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
@@ -101,7 +108,11 @@
                     <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
                 </ul>
 
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi voluptate deleniti quos commodi dolores, optio, fugit tempore earum voluptatum numquam explicabo enim aspernatur eaque vel, corporis nihil sunt consequatur corrupti! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem molestias expedita maiores id quisquam neque similique natus minus, ab velit, blanditiis fuga iusto unde debitis, dolorem libero quibusdam itaque odio.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi voluptate deleniti quos commodi
+                    dolores, optio, fugit tempore earum voluptatum numquam explicabo enim aspernatur eaque vel, corporis
+                    nihil sunt consequatur corrupti! Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Exercitationem molestias expedita maiores id quisquam neque similique natus minus, ab velit,
+                    blanditiis fuga iusto unde debitis, dolorem libero quibusdam itaque odio.</p>
 
                 <img src="cake4.png">
 
@@ -110,67 +121,73 @@
                     <dt>
                         <h4><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit?</strong></h4>
                     </dt>
-                    <dd valign="top">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat facilis reprehenderit..</p>
+                    <dd>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat
+                            facilis reprehenderit..</p>
                     </dd>
                     <dt>
                         <h4><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit?</strong></h4>
                     </dt>
-                    <dd valign="top">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat facilis reprehenderit..</p>
+                    <dd>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat
+                            facilis reprehenderit..</p>
                     </dd>
                     <dt>
                         <h4><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit?</strong></h4>
                     </dt>
-                    <dd valign="top">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat facilis reprehenderit..</p>
+                    <dd>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat
+                            facilis reprehenderit..</p>
                     </dd>
                     <dt>
                         <h4><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit?</strong></h4>
                     </dt>
-                    <dd valign="top">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat facilis reprehenderit..</p>
+                    <dd>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium. Placeat
+                            facilis reprehenderit..</p>
                     </dd>
                 </dl>
             </td>
         </tr>
 
     </table>
-    <table border="0" width="90%" align="center" style="background-color: aqua;">
-        <tr>
-            <td width="33%">
-                <form>
-                <p>I want to receive e-mails about:</p>
-                <select name="email" id="emailNotification">
-                    <option value="cakes">Cakes</option>
-                    <option value="pies">Pies</option>
-                    <option value="smothies">Smothies</option>
-                  </select>
-                  <br>
-                  <br>
-            </td>
-            <td width="33%" align="left" valign="center">
-                <p>Frequency</p>
-                <input id="daily" type="radio"> 
-                <label from="daily">Daily</label>
-                <input id="weekly" type="radio"> 
-                <label from="weekly">weekly</label>
-                <input id="monthly" type="radio"> 
-                <label from="monthly">Monthly</label>
-                <br>
-                <br>
-            </td>
-            <td width="33%">
-                <label from="email">Email:</label>
-                <br>
-                <input id="email" type="email" placeholder="filani@gmail.com"> 
-                <br>
-                <br>
-                <button type="submit">Subscribe</button>
-                </form>
-            </td>
-        </tr>
+    <form>
+        <table border="0" width="90%" align="center" style="background-color: aqua;">
+            <tr>
+                <td width="33%">
+
+                    <p>I want to receive e-mails about:</p>
+                    <select name="email" id="emailNotification">
+                        <option value="cakes">Cakes</option>
+                        <option value="pies">Pies</option>
+                        <option value="smothies">Smothies</option>
+                    </select>
+                    <br>
+                    <br>
+                </td>
+                <td width="33%" align="left" valign="center">
+                    <p>Frequency</p>
+                    <input id="daily" type="radio">
+                    <label from="daily">Daily</label>
+                    <input id="weekly" type="radio">
+                    <label from="weekly">weekly</label>
+                    <input id="monthly" type="radio">
+                    <label from="monthly">Monthly</label>
+                    <br>
+                    <br>
+                </td>
+                <td width="33%">
+                    <label from="email">Email:</label>
+                    <br>
+                    <input id="email" type="email" placeholder="filani@gmail.com">
+                    <br>
+                    <br>
+                    <button type="submit">Subscribe</button>
+    </form>
+    </td>
+    </tr>
     </table>
-    
+
 </body>
+
 </html>
